# fill-image-resize

./: .gitignore  README.md  pyproject.toml  resizer.py  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
src/fill_image_resize/: __init__.py  resizer.py
