[metadata]
name = fill-image-resize
version = 1.0.1
author = Danila Vasilev
author_email = mail@vasilev.ml
description = Package provides function for rather neat image resizing (like Fill resize in Figma)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/d0ctr/fill-image-resize
project_urls =
    Bug Tracker = https://github.com/d0ctr/fill-image-resize/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    Pillow >= 7.0.0

[options.packages.find]
where = src